# OpenGL_Research

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Camera.h  Constants.h  Game.h  Light.h  Mesh.h  Model.cpp  Model.h  RenderManager.h  Scene.h  Shader.h  Window.h  WindowManager.h
resources/Shader/: BaseShader.frag  BaseShader.vert  GeometryPass.frag  GeometryPass.vert  LightPass.frag  ShadowPass.frag  ShadowPass.geom  ShadowPass.vert  WaterPass.vert
src/: Game.cpp  Light.cpp  Mesh.cpp  RenderManager.cpp  Scene.cpp  Window.cpp  WindowManager.cpp  main.cpp
